--- a/VKClient/Screens/Base.lproj/Main.storyboard
+++ b/VKClient/Screens/Base.lproj/Main.storyboard
@@ -49,18 +49,18 @@
                                     </textField>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" constant="82" id="4Xk-dq-7hn"/>
+                                    <constraint firstAttribute="trailing" secondItem="fZt-q7-VRN" secondAttribute="trailing" constant="82" id="Dg0-At-nct"/>
                                     <constraint firstAttribute="bottom" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="420" id="Fex-6h-T0D"/>
-                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="centerX" secondItem="fZt-q7-VRN" secondAttribute="centerX" id="JOF-HK-sSs"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="Fhv-f0-KRD" secondAttribute="leading" id="QTu-yV-ea4"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="YGb-r8-M3q" secondAttribute="centerX" id="ULN-3f-ih1"/>
-                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="firstBaseline" secondItem="fZt-q7-VRN" secondAttribute="baseline" constant="70" id="Wvv-L3-AM4"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="YGb-r8-M3q" secondAttribute="bottom" constant="30" id="Z3z-qS-leM"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="YGb-r8-M3q" secondAttribute="centerX" id="aHp-L2-nnV"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="Fhv-f0-KRD" secondAttribute="leading" id="djA-LV-Wmc"/>
                                     <constraint firstItem="YGb-r8-M3q" firstAttribute="centerX" secondItem="ubd-rc-OPt" secondAttribute="centerX" id="h1F-Kl-UVT"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="YGb-r8-M3q" secondAttribute="bottom" constant="30" id="jvZ-uX-jxO"/>
-                                    <constraint firstAttribute="trailing" secondItem="fZt-q7-VRN" secondAttribute="trailing" constant="82" id="mb3-55-aX8"/>
                                     <constraint firstItem="YGb-r8-M3q" firstAttribute="top" secondItem="4PF-Pe-4vF" secondAttribute="top" constant="50" id="pVm-17-ieq"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="top" secondItem="fZt-q7-VRN" secondAttribute="bottom" constant="36" id="qUv-Xl-fXv"/>
                                     <constraint firstItem="JEj-4l-OFh" firstAttribute="top" secondItem="Fhv-f0-KRD" secondAttribute="bottom" constant="25" id="sRs-eW-v0O"/>
                                     <constraint firstItem="JEj-4l-OFh" firstAttribute="centerX" secondItem="Fhv-f0-KRD" secondAttribute="centerX" id="tfY-lK-KZi"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="trailing" secondItem="Fhv-f0-KRD" secondAttribute="trailing" id="ybl-a6-qZu"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" constant="82" id="z6S-GT-t5w"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="V66-Tu-eTy"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="4PF-Pe-4vF"/>
@@ -299,7 +299,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8E-vM-MVT">
-                                                    <rect key="frame" x="20" y="38" width="98" height="24"/>
+                                                    <rect key="frame" x="20" y="38" width="260" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -315,6 +315,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="c6s-gL-saf" firstAttribute="centerY" secondItem="JNx-ls-DYH" secondAttribute="centerY" id="5gt-jB-KcL"/>
+                                                <constraint firstItem="c6s-gL-saf" firstAttribute="leading" secondItem="E8E-vM-MVT" secondAttribute="trailing" constant="14" id="bNx-NA-TOG"/>
                                                 <constraint firstAttribute="trailing" secondItem="c6s-gL-saf" secondAttribute="trailing" constant="20" id="pji-ti-gsH"/>
                                                 <constraint firstItem="E8E-vM-MVT" firstAttribute="leading" secondItem="JNx-ls-DYH" secondAttribute="leading" constant="20" id="uCY-EU-cRH"/>
                                                 <constraint firstItem="E8E-vM-MVT" firstAttribute="centerY" secondItem="JNx-ls-DYH" secondAttribute="centerY" id="w51-bc-eZ5"/>
@@ -347,7 +348,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHf-gI-gz7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2619" y="-244"/>
+            <point key="canvasLocation" x="2618.840579710145" y="-244.41964285714283"/>
         </scene>
         <!--Friend Page View Controller-->
         <scene sceneID="xrQ-DT-CJK">
@@ -543,7 +544,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GroupName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mt-8H-tCE">
-                                                    <rect key="frame" x="20" y="38" width="106.5" height="24"/>
+                                                    <rect key="frame" x="20" y="38" width="253" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -560,6 +561,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="ljK-sa-YRE" secondAttribute="trailing" constant="20" id="2TC-I7-nR3"/>
                                                 <constraint firstItem="9Mt-8H-tCE" firstAttribute="centerY" secondItem="1Mx-dS-qy7" secondAttribute="centerY" id="YFs-Sb-aUj"/>
                                                 <constraint firstItem="ljK-sa-YRE" firstAttribute="centerY" secondItem="1Mx-dS-qy7" secondAttribute="centerY" id="tFY-KG-o2B"/>
+                                                <constraint firstItem="ljK-sa-YRE" firstAttribute="leading" secondItem="9Mt-8H-tCE" secondAttribute="trailing" constant="31" id="tNd-dP-CZO"/>
                                                 <constraint firstItem="9Mt-8H-tCE" firstAttribute="leading" secondItem="1Mx-dS-qy7" secondAttribute="leading" constant="20" id="vca-4n-mzI"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -588,7 +590,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hDy-zy-fen" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4149" y="158"/>
+            <point key="canvasLocation" x="4147.826086956522" y="157.36607142857142"/>
         </scene>
         <!--Группы-->
         <scene sceneID="h8S-Hc-6oe">
@@ -660,7 +662,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="KhO-AY-Dfi"/>
+        <segue reference="xGY-LL-kRN"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="heart" catalog="system" width="128" height="109"/>
