--- a/VKClient/Screens/Base.lproj/Main.storyboard
+++ b/VKClient/Screens/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -57,21 +57,24 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="4PF-Pe-4vF" firstAttribute="bottom" secondItem="xxT-ck-j1l" secondAttribute="bottom" id="3zY-tV-1At"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="centerX" secondItem="fZt-q7-VRN" secondAttribute="centerX" id="8SL-aI-LAv"/>
                                     <constraint firstItem="xxT-ck-j1l" firstAttribute="trailing" secondItem="4PF-Pe-4vF" secondAttribute="trailing" id="9oF-rq-4R3"/>
-                                    <constraint firstAttribute="trailing" secondItem="fZt-q7-VRN" secondAttribute="trailing" constant="82" id="Dg0-At-nct"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fZt-q7-VRN" secondAttribute="trailing" id="Dg0-At-nct"/>
                                     <constraint firstAttribute="bottom" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="420" id="Fex-6h-T0D"/>
                                     <constraint firstItem="xxT-ck-j1l" firstAttribute="top" secondItem="ubd-rc-OPt" secondAttribute="top" id="OS7-de-oDR"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" constant="82" id="STe-yR-XqF"/>
                                     <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="YGb-r8-M3q" secondAttribute="bottom" constant="30" id="Z3z-qS-leM"/>
                                     <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="YGb-r8-M3q" secondAttribute="centerX" id="aHp-L2-nnV"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="Fhv-f0-KRD" secondAttribute="leading" id="djA-LV-Wmc"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Fhv-f0-KRD" secondAttribute="leading" id="djA-LV-Wmc"/>
                                     <constraint firstItem="YGb-r8-M3q" firstAttribute="centerX" secondItem="ubd-rc-OPt" secondAttribute="centerX" id="h1F-Kl-UVT"/>
+                                    <constraint firstAttribute="trailing" secondItem="Fhv-f0-KRD" secondAttribute="trailing" constant="82" id="iuX-4B-oWz"/>
                                     <constraint firstItem="xxT-ck-j1l" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" id="jwf-iv-xLQ"/>
                                     <constraint firstItem="YGb-r8-M3q" firstAttribute="top" secondItem="4PF-Pe-4vF" secondAttribute="top" constant="50" id="pVm-17-ieq"/>
                                     <constraint firstItem="Fhv-f0-KRD" firstAttribute="top" secondItem="fZt-q7-VRN" secondAttribute="bottom" constant="36" id="qUv-Xl-fXv"/>
                                     <constraint firstItem="JEj-4l-OFh" firstAttribute="top" secondItem="Fhv-f0-KRD" secondAttribute="bottom" constant="25" id="sRs-eW-v0O"/>
                                     <constraint firstItem="JEj-4l-OFh" firstAttribute="centerX" secondItem="Fhv-f0-KRD" secondAttribute="centerX" id="tfY-lK-KZi"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="trailing" secondItem="Fhv-f0-KRD" secondAttribute="trailing" id="ybl-a6-qZu"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" constant="82" id="z6S-GT-t5w"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fhv-f0-KRD" secondAttribute="trailing" id="ybl-a6-qZu"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4PF-Pe-4vF" secondAttribute="leading" id="z6S-GT-t5w"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="V66-Tu-eTy"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="4PF-Pe-4vF"/>
@@ -99,24 +102,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="132" y="139"/>
-        </scene>
-        <!--Login Controller-->
-        <scene sceneID="gHl-aL-hCe">
-            <objects>
-                <viewController id="p3N-nC-3vo" customClass="VKLoginController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8Ne-AT-gkl">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="0bk-ax-1EN"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <connections>
-                        <outlet property="webView" destination="xxT-ck-j1l" id="ibV-iX-lVu"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bzM-fV-2uw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="132" y="844"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="QDS-lt-8nb">
@@ -220,7 +205,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Cz-3b-d4N">
                                                     <rect key="frame" x="55" y="165.5" width="40" height="19.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="40" id="DBy-Yu-yGC"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="DBy-Yu-yGC"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" systemColor="opaqueSeparatorColor"/>
@@ -237,7 +222,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFg-9d-fcw">
                                                     <rect key="frame" x="334" y="165.5" width="50" height="19.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="ss0-eF-Cg2"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="ss0-eF-Cg2"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" systemColor="opaqueSeparatorColor"/>
